--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Recipe by Me</title>
 </head>
 
 <body>
 
     <h1>Odin Recipes</h1>
 
+    <ul>
+    <li><a href="recipes/falafel.html">Falafel Recipe</a></li>
+    <li><a href="recipes/enchiladas.html">Enchiladas Recipe</a></li>
+    <li><a href="recipes/pineapple_cake.html">Pineapple Dessert</a></li>
+    </ul>
 </body>
 
 
