--- a/recipes/pineapple_cake.html
+++ b/recipes/pineapple_cake.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <h1>Falafel</h1>
+    <h1>Pineapple Upside Down Cake</h1>
 
     <img src="../images/pineapple_cake.jpeg" alt="Falafel Image" height="300" width="300">  
 
