--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -4,9 +4,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
-<body>
+<body id="falafel">
 
     <h1>Falafel</h1>
 
