--- a/odin-recipes/recipes/enchiladas.html
+++ b/odin-recipes/recipes/enchiladas.html
@@ -10,7 +10,7 @@
 
 <body id="enchiladas">
 
-    <h1><ins>Enchiladas</ins></h1>
+    <h1>Enchiladas</h1>
 
     <img src="../images/enchiladas.jpeg" alt="Falafel Image" height="300" width="300">  
 
@@ -18,7 +18,7 @@
 
 <p>Enchiladas are a classic Mexican dish consisting of rolled tortillas filled with a savory mixture, typically chicken, beef, or cheese. These tortillas are then covered with a rich enchilada sauce and baked until hot and bubbly. The result is a flavorful, comforting dish with tender, slightly crispy edges. Topped with melted cheese and often garnished with sour cream and fresh cilantro, enchiladas offer a perfect balance of savory, spicy, and creamy flavors, making them a beloved choice for a hearty meal.</p>
 
-<h4><em>Ingredients:</em></h4>
+<h4><em>Ingredients</em></h4>
 
     <ul>
         <li>12 corn tortillas</li>
@@ -33,7 +33,7 @@
         <li>1/2 teaspoon chili powder</li>
     </ul>
 
-    <h4><em>Steps:</em></h4>
+    <h4><em>Steps</em></h4>
     
     <ol>
         <li>Preheat Oven: Preheat your oven to 375°F</li>
