--- a/odin-recipes/recipes/falafel.html
+++ b/odin-recipes/recipes/falafel.html
@@ -10,7 +10,7 @@
 
 <body id="falafel">
 
-    <h1><ins>Falafel</ins></h1>
+    <h1>Falafel</h1>
 
     <img src="../images/falafel.jpeg" alt="Falafel Image" height="300" width="300">  
 
@@ -18,7 +18,7 @@
 
 <p>This falafel recipe brings a taste of the Middle East right to your kitchen. Made from ground chickpeas and a blend of fresh herbs and spices, these golden-brown nuggets are both crispy on the outside and tender on the inside. The chickpeas are combined with garlic, onions, cumin, coriander, and parsley, then formed into small patties and fried until perfection. Served warm, falafel is often enjoyed in pita bread with a variety of toppings such as tomatoes, cucumbers, and tahini sauce, making it a versatile and satisfying meal. Whether you’re looking for a hearty vegetarian option or simply love the rich flavors of Middle Eastern cuisine, this falafel recipe is sure to delight.</p>
 
-<h4><em>Ingredients:</em></h4>
+<h4><em>Ingredients</em></h4>
 
     <ul>
         <li>1 cup dried chickpeas</li>
@@ -33,7 +33,7 @@
         <li>Oil</li>
     </ul>
 
-    <h4><em>Steps:</em></h4>
+    <h4><em>Steps</em></h4>
     
     <ol>
         <li>Drain and Rinse Chickpeas: Soak chickpeas overnight, then drain and rinse.</li>
