--- a/odin-recipes/recipes/pineapple_cake.html
+++ b/odin-recipes/recipes/pineapple_cake.html
@@ -10,7 +10,7 @@
 
 <body id="page-about">
 
-    <h1><ins>Pineapple Upside Down Cake</ins></h1>
+    <h1>Pineapple Upside Down Cake</h1>
 
     <img src="../images/pineapple_cake.jpeg" alt="Falafel Image" height="300" width="300">  
 
@@ -18,7 +18,7 @@
 
 <p>Pineapple upside-down cake is a classic dessert featuring a caramelized topping of pineapple rings and cherries. The cake is baked with a buttery, sweet layer of brown sugar and pineapple on the bottom, then flipped over to reveal a beautiful, fruity topping. The result is a moist and flavorful cake with a rich, caramelized pineapple flavor, perfect for a delightful treat.</p>
 
-<h4><em>Ingredients:</em></h4>
+<h4><em>Ingredients</em></h4>
 
     <ul>
         <li>1/2 cup unsalted butter</li>
@@ -33,7 +33,7 @@
         <li>1/2 teaspoon vanilla extract</li>
     </ul>
 
-    <h4><em>Steps:</em></h4>
+    <h4><em>Steps</em></h4>
     
     <ol>
         <li>Preheat Oven: Heat to 350°F</li>
