--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,18 +9,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="main-page">
 
-    <h1 id="title"><ins>Odin Recipes</ins></h1>
+    <h1>Odin Recipes</h1>
 
-<div class="text-centered">
     <ul>
     <li><a href="recipes/falafel.html">Falafel Recipe</a></li>
     <li><a href="recipes/enchiladas.html">Enchiladas Recipe</a></li>
     <li><a href="recipes/pineapple_cake.html">Pineapple Dessert</a></li>
     </ul>
-</div>
-
 </body>
 
 
