--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="home-page">
 
     <h1 id="title"><ins>Odin Recipes</ins></h1>
 
