--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 
-<body id="enchiladas">
+<body id="enchiladas" class="bg-enchiladas">
 
     <h1><ins>Enchiladas</ins></h1>
 
