--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 
-<body id="falafel">
+<body id="falafel" class="bg-falafel">
 
     <h1><ins>Falafel</ins></h1>
 
