--- a/recipes/pineapple_cake.html
+++ b/recipes/pineapple_cake.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 
-<body id="page-about">
+<body id="page-about" class="bg-cake">
 
     <h1><ins>Pineapple Upside Down Cake</ins></h1>
 
